--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     <ul class="nav navbar-nav navbar-right">
       <li><a href="/index">Home</a></li>
       <li class="dropdown">
-        <a aria-expanded="false" href="#" class="dropdown-toggle" data-toggle="dropdown">Products <b class="caret"></b></a>
+        <a aria-expanded="false" href="#" class="dropdown-toggle" data-toggle="dropdown">Manufacturers <b class="caret"></b></a>
         <ul class="dropdown-menu">
           <li><a href="#">Car Dashboard</a></li>
           <li><a href="#">Car Dashboard</a></li>
@@ -34,10 +34,7 @@
         <li class="dropdown">
         <a aria-expanded="false" href="#" class="dropdown-toggle" data-toggle="dropdown">About Us <b class="caret"></b></a>
         <ul class="dropdown-menu">
-          <li><a href="management.html">Management</a></li>
           <li><a href="#">Code of Conduct</a></li>
-          <li><a href="#">Business Process</a></li>
-          <li><a href="location.html">Locations</a></li>
           <li><a href="#">Contacts</a></li>
         </ul>
       </li>
