--- a/public/index.html
+++ b/public/index.html
@@ -1,102 +1,149 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Elite Technologies</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="stylesheets/bootstrap.min.css" />
-    <link rel="stylesheet" href="stylesheets/style.css" />
-    <link rel="stylesheet" href="stylesheets/pages.css" />
-    <link rel="stylesheet" href="stylesheets/carousal.css" />
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+
+    <!-- Bootstrap -->
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+    <style>
+
+      .navbar{
+
+        padding: 0px;
+        margin: 0px;
+      }
+
+      #mainCarousel{
+        padding:0px;
+        margin:0px;
+        width:100%;
+        height:100%;
+      }
+    </style>
   </head>
+
+
   <body>
-  
-  <header>
-  <div class="navbar navbar-inverse">
-  <div class="container">
-  <div class="navbar-header">
-  <img src="images/elite.jpg" class="profile" height="72" width="72">
     
-  </div>
+    <div class="navbar navbar-inverse">
+      <div class="container">
+        <div class="navbar-header">
+          <a href="#" class="navbar-brand">Elite Technologies</a>
+          <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+        </div>
+          <div class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Home</a></li>
+            <li class="dropdown">
+              <a aria-expanded="false" href="#" class="dropdown-toggle" data-toggle="dropdown">Manufacturers <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                  <li><a href="#">Mercedes</a></li>
+                  <li><a href="#">BMW</a></li>
+                  <li><a href="#">Audi</a></li>
+                </ul>
+            </li>
+            <li><a href="#">About Us</a></li>
+          </ul>
+          </div>
+      </div>
+    </div>
 
-  <div class="navbar-collapse collapse navbar-inverse-collapse">
-    <ul class="nav navbar-nav navbar-right">
-      <li><a href="/index">Home</a></li>
-      <li class="dropdown">
-        <a aria-expanded="false" href="#" class="dropdown-toggle" data-toggle="dropdown">Manufacturers <b class="caret"></b></a>
-        <ul class="dropdown-menu">
-          <li><a href="#">Car Dashboard</a></li>
-          <li><a href="#">Car Dashboard</a></li>
-          <li><a href="#">Car Dashboard</a></li>
-        </ul>
-      </li>
-        <li class="dropdown">
-        <a aria-expanded="false" href="#" class="dropdown-toggle" data-toggle="dropdown">About Us <b class="caret"></b></a>
-        <ul class="dropdown-menu">
-          <li><a href="#">Code of Conduct</a></li>
-          <li><a href="#">Contacts</a></li>
-        </ul>
-      </li>
-    </ul>
-  </div>
-  </div>
-</div>
-</header>
+    <!-- <div class="navbar navbar-inverse fixed">
+      <div class="container">
+        <div class="navbar-header">
+          <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand">Elite Technologies</a>
+        </div>
 
-  <div class="container">
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#myCarousel" data-slide-to="1"></li>
-      <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
+        <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Home</a></li>
+            <li class="dropdown">
+              <a aria-expanded="false" href="#" class="dropdown-toggle" data-toggle="dropdown">Manufacturers <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                  <li><a href="#">Mercedes</a></li>
+                  <li><a href="#">BMW</a></li>
+                  <li><a href="#">Audi</a></li>
+                </ul>
+            </li>
+            <li><a href="#">About Us</a></li>
+          </ul>
+        </div>
+      </div>
+    </div> -->
 
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner" role="listbox">
+    <div class="container" id="mainCarousel">
+      <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner" role="listbox">
       <div class="item active">
-        <img src="images/dash1.jpg" alt="...">
+        <img src="images/dash7.png" alt="...">
         <div class="carousel-caption">
           Car Dashboard
         </div>
       </div>
       <div class="item">
-        <img src="images/dash2.jpg" alt="...">
+        <img src="images/dash5.jpg" alt="...">
         <div class="carousel-caption">
           Car Dashboard
         </div>
       </div>
       <div class="item">
-        <img src="images/dash3.jpg" alt="...">
+        <img src="images/dash6.jpg" alt="...">
         <div class="carousel-caption">
           Car Dashboard
         </div>
       </div>
     </div>
 
-    <!-- Controls -->
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right"></span>
-      <span class="sr-only">Next</span>
-    </a>
+  <!-- Controls -->
+  <!-- <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a> -->
+</div>
     </div>
-  </div>
-  </br>
+
+    <script>
+      $("#mainCarousel").css("height".$(window).height());
+    </script>
 
 
-  </div>
-  	</div>
-    <footer>
-      <div class="footer">
-  	   <div class="container"">
-          <p style="text-align:center;"> Copyrights. &copy; Elite Tech.</p>
-	     </div>
-      </div>
-    </footer>
+
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   </body>
 </html>
