--- a/public/bmw.html
+++ b/public/bmw.html
@@ -7,6 +7,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Elite Technologies</title>
 
+    <link href="css/modern-business.css" rel="stylesheet">
     <!-- Bootstrap -->
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 
@@ -45,33 +46,41 @@
 
 <body>
     
-    <div class="navbar navbar-inverse">
-      <div class="container">
-        <div class="navbar-header">
-          <a href="#" class="navbar-brand">Elite Technologies</a>
-          <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-        </div>
-          <div class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li class="dropdown">
-              <a aria-expanded="false" href="#" class="dropdown-toggle" data-toggle="dropdown">Manufacturers <b class="caret"></b></a>
-                <ul class="dropdown-menu">
-                  <li><a href="#">Mercedes</a></li>
-                  <li><a href="#">BMW</a></li>
-                  <li><a href="#">Audi</a></li>
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a style="font-size:2em;" class="navbar-brand" href="index.html">Elite Technologies</a>
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a class="page-scroll" href="index.html">About</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="index.html">Services</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="index.html">Contact</a>
+                    </li>
+                    <li>
+                        <a href="#collapseExample" data-toggle="collapse" aria-expanded="false" aria-controls="collapseExample">Feedback</a>
+                    </li>
                 </ul>
-            </li>
-            <li><a href="/about_us.html">About Us</a></li>
-          </ul>
-          </div>
-      </div>
-    </div>
-    
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
+
+
     <img style="margin-bottom:10px; align-self:center" class="active visible-lg img-responsive" src="images/bmw.jpg" />
     <div class="container" style="width:auto" align="center" role="tabpanel">
 	<div class="tabbable">
