--- a/public/index.html
+++ b/public/index.html
@@ -119,7 +119,7 @@
                     </div>
                     <div class="panel-body">
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
-                        <a href="mercedes.html" class="btn btn-default">Learn More</a>
+                        <a href="/mercedes" class="btn btn-default">Learn More</a>
                     </div>
                 </div>
             </div>
