display graphs for bmw & audi
display graphs for bmw & audi

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Modern Business - Start Bootstrap Template</title>
+    <title>Car Manufacturers</title>
 
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
@@ -130,7 +130,7 @@
                     </div>
                     <div class="panel-body">
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
-                        <a href="bmw.html" class="btn btn-default">Learn More</a>
+                        <a href="/bmw" class="btn btn-default">Learn More</a>
                     </div>
                 </div>
             </div>
@@ -141,7 +141,7 @@
                     </div>
                     <div class="panel-body">
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
-                        <a href="audi.html" class="btn btn-default">Learn More</a>
+                        <a href="/audi" class="btn btn-default">Learn More</a>
                     </div>
                 </div>
             </div>
